Fixes text alignemnt in projects

--- a/_sass/layouts/_projects.scss
+++ b/_sass/layouts/_projects.scss
@@ -91,6 +91,7 @@
     font-weight: bold;
     margin: 10pt;
     pointer-events: none;
+    text-align: left;
   }
   
   .breaking {
